--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>ホーム</title>
+<link href="@{/css/rayout.css}"  rel = "stylesheet">
 </head>
 <body>
-<h1>テスト</h1>
+	<div class="container">
+	<div th:replace ="sidebar :: sidebar"></div>
+	<h1>テスト</h1>
+	</div>
 </body>
 </html>
