--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login</title>
+    <title>ログイン</title>
 </head>
 <body>
+	<p>ELBOOK</p>
     <div th:if="${param.error}">
         <p>Invalid username and password.</p>
     </div>
@@ -13,17 +14,15 @@
     <form th:action="@{/login}" method="post">
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
         <div>
-            <label>Username: </label>
-            <input type="text" name="username" required/>
+            <input type="text" name="username" placeholder="ユーザー名" required/>
         </div>
         <div>
-            <label>Password: </label>
-            <input type="password" name="password" required/>
+            <input type="password" name="password" placeholder="パスワード" required/>
         </div>
-        <button type="submit">Login</button>
+        <button type="submit">ログイン</button>
     </form>
     <p>
-        Don't have an account? <a th:href="@{/register}">Register</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
+     <a th:href="@{/register}">※新規登録</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
     </p>
 </body>
 </html>
