--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Register</title>
+    <title>新規登録</title>
 </head>
 <body>
-    <h2>Register</h2>
+    <p>ELBOOK</p>
     <form th:action="@{/register}" method="post">
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" required><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password" required><br>
-        <input type="submit" value="Submit">
+        <input type="text" id="userName" name="userName" placeholder="ユーザー名" required><br>
+        <input type="password" id="password" name="password" placeholder="パスワード" required><br>
+        <input type="submit" value="新規登録">
     </form>
+    <p>
+     <a th:href="@{/login}">※登録済みの方</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
+    </p>
 </body>
 </html>
