--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -8,7 +8,7 @@
 
 <body>
 	<div class="sidebar" th:fragment="sidebar">
-		<h1>ELBOOK</h1>
+		<a th:href="@{/home}">ELBOOK</a>
 		<ul>
 			<li><a th:href="@{/bookList}">一覧</a></li>
 			<li><a th:href="@{/regBook}">登録</a></li>
