--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -24,6 +24,7 @@
 						<th>タイトル</th>
 						<th>著者</th>
 						<th>あらすじ・概要</th>
+						<th>貸出状況</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -31,6 +32,10 @@
 						<td th:text="${book.title}"></td>
 						<td th:text="${book.author.name}"></td>
 						<td th:text="${book.summary}"></td>
+						<td>
+							<p th:if="${book.transaction.transacitonType == '貸出'}" th:text="'貸出'"></p>
+							<p th:if="${book.transaction.transacitonType == '本棚'}" th:text="'利用可能'"></p>
+						</td>
 						<td>
 							<a th:href="@{/editBook(id=${book.bookId})}">編集</a>
 						</td>
