--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html xmlns="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>ホーム</title>
-<link th:href="@{css/layout.css}"  rel = "stylesheet">
+	<meta charset="UTF-8">
+	<title>ホーム</title>
+	<link th:href="@{css/layout.css}" rel="stylesheet">
 </head>
+
 <body>
 	<div class="container">
-	<div th:replace ="~{sidebar :: sidebar}"></div>
+		<div th:replace="~{sidebar :: sidebar}"></div>
+		<div class="content">
+			<h2>現在借りている書籍</h2>
+			<table>
+				<thead>
+					<tr>
+						<th>タイトル</th>
+						<th>貸出日</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="book : ${books}">
+						<td th:text="${book.title}"></td>
+						<td th:text="${#dates.format(book.transaction.borrowDate, 'yyyy/MM/dd')}"></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </body>
+
 </html>
