--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>ホーム</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
+	<script src="js/search.js"></script>
 </head>
 
 <body>
@@ -15,7 +16,12 @@
 
 			<div class="search-section">
 				<input type="text" id="search" placeholder="タイトルや著者で検索">
-				<button>検索</button>
+				<div>
+					<label><input type="checkbox" id="searchByTitle">タイトル</label>
+					<label><input type="checkbox" id="searchByAuthor">著者</label>
+				</div>
+				<button onclick="performSearch()">検索</button>
+				<button onclick="resetSearchForm()">リセット</button>
 			</div>
 
 			<table>
@@ -27,14 +33,14 @@
 						<th>貸出状況</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody id="results">
 					<tr th:each="book : ${books}">
 						<td th:text="${book.title}"></td>
 						<td th:text="${book.author.name}"></td>
 						<td th:text="${book.summary}"></td>
 						<td>
-							<p th:if="${book.transaction.transacitonType == '貸出'}" th:text="'貸出'"></p>
-							<p th:if="${book.transaction.transacitonType == '本棚'}" th:text="'利用可能'"></p>
+							<p th:if="${book.transaction.transactionType == '貸出'}" th:text="'貸出'"></p>
+							<p th:if="${book.transaction.transactionType == '本棚'}" th:text="'利用可能'"></p>
 						</td>
 						<td>
 							<a th:href="@{/editBook(id=${book.bookId})}">編集</a>
