--- a/src/main/resources/templates/sidebar.html
+++ b/src/main/resources/templates/sidebar.html
@@ -13,6 +13,7 @@
 			<li><a th:href="@{/bookList}">一覧</a></li>
 			<li><a th:href="@{/regBook}">登録</a></li>
 			<li><a th:href="@{/setting}">設定</a></li>
+			<li><a th:href="@{/userManagement}">管理</a></li>
 		</ul>
 		<form th:action="@{/logout}" method="post">
 			<button type="submit" id="logout">ログアウト</button>
