--- a/src/main/resources/templates/regBook.html
+++ b/src/main/resources/templates/regBook.html
@@ -15,7 +15,7 @@
 			<br>
 			<input type="text" id="name" name="name"  placeholder="著者名" required>
 			<br>
-			<input type="text" id="summary" name="summary" placeholder="あらすじ・概要" required>
+			<textarea id="summary" name="summary" placeholder="あらすじ・概要" required></textarea>
 			<br>
 			<input type="submit" value="新規登録">
 		</form>
