--- a/src/main/resources/templates/userManagement.html
+++ b/src/main/resources/templates/userManagement.html
@@ -12,6 +12,24 @@
 		<div th:replace="~{sidebar :: sidebar}"></div>
 		<div class="content">
 			<h1>ユーザー管理</h1>
+			<a th:href="@{/register}">新規登録</a>
+			<table>
+				<thead>
+					<tr>
+						<th>ユーザーID</th>
+						<th>ユーザーネーム</th>
+						<th>権限</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="user:${users}">
+						<td th:text="${user.userId}"></td>
+						<td th:text="${user.userName}"></td>
+						<td th:text="${user.role}"></td>
+						<td><a th:href="@{/adminSetting(id=${user.userId})}">編集</a></td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</div>
 </body>
