--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>ホーム</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
+	<link th:href="@{css/editBook.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -16,21 +17,34 @@
 			<form th:action="@{/Book}" th:object="${book}" method="post">
 				<input type="hidden" name="bookId" th:value="*{bookId}" />
 				<input type="hidden" name="transaction.transactionType" th:value="*{transaction.transactionType}" />
-				<input type="text" id="title" name="title" placeholder="タイトル" th:value="*{title}" required>
+				<label>タイトル：</label>
 				<br>
-				<input type="text" id="name" name="author.name" placeholder="著者名" th:value="*{author.name}" required>
+				<input type="text" class="title" id="title" name="title" placeholder="タイトル" th:value="*{title}" required>
 				<br>
-				<input type="text" id="summary" name="summary" placeholder="あらすじ・概要" th:value="*{summary}" required>
+				<label>著者：</label>
+				<br>
+				<input type="text" class="author" id="name" name="author.name" placeholder="著者名" th:value="*{author.name}" required>
+				<br>
+				<label>あらすじ・概要：</label>
+				<br>
+				<textarea id="summary" name="summary" placeholder="あらすじ・概要" th:text="*{summary}" required></textarea>
 				<br>
 				<p th:text="'現在の貸出状況:' + ${transaction.transactionType}"></p>
-				<p th:if="${transaction.transactionType == '貸出'}" th:text="'貸出日' + ${#dates.format(transaction.borrowDate, 'yyyy/MM/dd')}"></p>
-				
-				<button type="submit" name="action" value="rental" th:if="${transaction.transactionType == '本棚'}">貸出</button>
-				
-				<button type="submit" name="action" value="return" th:if="${transaction.transactionType == '貸出' and transaction.user.userId == currentUserId}">返却</button>
-				
-				<button type="submit" name="action" value="update">更新</button>
-				
+				<p th:if="${transaction.transactionType == '貸出'}"
+					th:text="'貸出日' + ${#dates.format(transaction.borrowDate, 'yyyy/MM/dd')}"></p>
+
+				<button type="submit" name="action" value="rental"
+					th:if="${transaction.transactionType == '本棚'}">貸出</button>
+
+				<button type="submit" name="action" value="return"
+					th:if="${transaction.transactionType == '貸出' and transaction.user.userId == currentUser.userId}">返却</button>
+
+				<button type="submit" name="action" th:if="${currentUser.role == 'ROLE_ADMIN'}"
+					value="update">更新</button>
+
+				<button type="submit" name="action" th:if="${currentUser.role == 'ROLE_ADMIN'}"
+					value="delete">削除</button>
+
 			</form>
 		</div>
 </body>
