--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.thymeleaf.org">
+
 <head>
-    <title>ログイン</title>
+	<meta charset="UTF-8">
+	<title>ログイン</title>
+	<link th:href="@{css/login.css}" rel="stylesheet">
 </head>
+
 <body>
-	<p>ELBOOK</p>
-    <div th:if="${param.error}">
-        <p>Invalid username and password.</p>
-    </div>
-    <div th:if="${param.logout}">
-        <p>You have been logged out.</p>
-    </div>
-    <form th:action="@{/login}" method="post">
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-        <div>
-            <input type="text" name="username" placeholder="ユーザー名" required/>
-        </div>
-        <div>
-            <input type="password" name="password" placeholder="パスワード" required/>
-        </div>
-        <button type="submit">ログイン</button>
-    </form>
-    <p>
-     <a th:href="@{/register}">※新規登録</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
-    </p>
+	<h1>ELBOOK</h1>
+	<div class="content">
+		<div th:if="${param.error}">
+			<p>無効なユーザー名とパスワードです。</p>
+		</div>
+		<div th:if="${param.logout}">
+			<p>ログアウトしました。</p>
+		</div>
+		<form th:action="@{/login}" method="post">
+			<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+			<div>
+				<input type="text" name="username" placeholder="ユーザー名" required />
+			</div>
+			<div>
+				<input type="password" name="password" placeholder="パスワード" required />
+			</div>
+			<button type="submit">ログイン</button>
+		</form>
+	</div>
 </body>
+
 </html>
