--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <title>新規登録</title>
+    <link th:href="@{/css/layout.css}" rel="stylesheet">
 </head>
+
 <body>
-    <p>ELBOOK</p>
-    <form th:action="@{/register}" method="post">
-        <input type="text" id="userName" name="userName" placeholder="ユーザー名" required><br>
-        <input type="password" id="password" name="password" placeholder="パスワード" required><br>
-        <input type="submit" value="新規登録">
-    </form>
-    <p>
-     <a th:href="@{/login}">※登録済みの方</a>  <!-- 新規アカウント作成ページへのリンクを追加 -->
-    </p>
+    <div class="container">
+        <div th:replace="~{sidebar :: sidebar}"></div>
+        <div class="content">
+            <h1>管理設定：ユーザー登録</h1>
+            <form th:action="@{/register}" th:object="${user}" method="post">
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                <label for="userName">ユーザー名:</label>
+                <input type="text" id="userName" name="userName" th:field="*{userName}" placeholder="ユーザー名" required>
+                <br>
+                <label for="password">パスワード:</label>
+                <input type="password" id="password" name="password" th:field="*{password}" placeholder="パスワード">
+                <br>
+                <label for="role">権限:</label>
+                <select id="role" name="role" th:field="*{role}">
+                    <option th:each="role : ${roles}" th:value="${role}" th:text="${role}"></option>
+                </select>
+                <br>
+                <button type="submit">登録</button>
+            </form>
+        </div>
+    </div>
 </body>
+
 </html>
