--- a/src/main/resources/static/css/bookList.css
+++ b/src/main/resources/static/css/bookList.css
@@ -4,6 +4,7 @@
  border-collapse: collapse;
  border-spacing: 0;
  border: solid 1px #778ca3;
+ margin-top: 10px;
 }
 .design02 tr {
  border-top: dashed 1px #778ca3;
