--- a/src/main/resources/static/css/editBook.css
+++ b/src/main/resources/static/css/editBook.css
@@ -1,13 +1,13 @@
 .title {
-	width: 100px;
-}
-
-.author {
-	width: 80px;
+	width: 200px;
 }
 
 textarea {
-	width: 300px;
-	height: 150px;
+	width: 400px;
+	height: 100px;
 	resize: none;
+}
+
+button{
+	margin: 5px;
 }
