--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -27,7 +27,7 @@
 				<br>
 				<label>あらすじ・概要：</label>
 				<br>
-				<textarea id="summary" name="summary" placeholder="あらすじ・概要" th:text="*{summary}" required></textarea>
+				<textarea id="summary" name="summary" placeholder="あらすじ・概要" th:text="*{summary}" ></textarea>
 				<br>
 				<p th:text="'現在の貸出状況:' + ${transaction.transactionType}"></p>
 				<p th:if="${transaction.transactionType == '貸出'}"
