--- a/src/main/resources/templates/regBook.html
+++ b/src/main/resources/templates/regBook.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>ホーム</title>
 <link th:href="@{css/layout.css}"  rel = "stylesheet">
+<link th:href="@{css/regBook.css}"  rel = "stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -11,13 +12,13 @@
     <div class="content">
         <h1>書籍登録</h1>
         <form th:action="@{/regBook}" method="post">
-			<input type="text" id="title" name="title" placeholder="タイトル" required>
+			<input type="text" class="title_form" id="title" name="title"  maxlength="255" placeholder="タイトル" required>
 			<br>
-			<input type="text" id="name" name="name"  placeholder="著者名" required>
+			<input type="text" class="author_form" id="name" name="name"  maxlength="255" placeholder="著者名" required>
 			<br>
-			<textarea id="summary" name="summary" placeholder="あらすじ・概要" required></textarea>
+			<textarea id="summary" class="summary_form" name="summary" maxlength="255" placeholder="あらすじ・概要"></textarea>
 			<br>
-			<input type="submit" value="新規登録">
+			<input type="submit" class="reg_btn" value="新規登録">
 		</form>
     </div>
 </body>
