--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,6 +4,7 @@
 <head>
     <title>新規登録</title>
     <link th:href="@{/css/layout.css}" rel="stylesheet">
+    <link th:href="@{/css/register.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -13,18 +14,21 @@
             <h1>管理設定：ユーザー登録</h1>
             <form th:action="@{/register}" th:object="${user}" method="post">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-                <label for="userName">ユーザー名:</label>
-                <input type="text" id="userName" name="userName" th:field="*{userName}" placeholder="ユーザー名" required>
+                
+                <input type="text" class="userName_form" id="userName" name="userName" th:field="*{userName}" placeholder="ユーザー名" maxlength="255" required>
                 <br>
-                <label for="password">パスワード:</label>
-                <input type="password" id="password" name="password" th:field="*{password}" placeholder="パスワード">
+                
+                <input type="password" class="password_form" id="password" name="password" th:field="*{password}" maxlength="255" placeholder="パスワード" required>
                 <br>
+                
+                <div class="role">
                 <label for="role">権限:</label>
                 <select id="role" name="role" th:field="*{role}">
                     <option th:each="role : ${roles}" th:value="${role}" th:text="${role}"></option>
                 </select>
-                <br>
-                <button type="submit">登録</button>
+                </div>
+                
+                <button type="submit" class="regist_btn">登録</button>
             </form>
         </div>
     </div>
