--- a/src/main/resources/templates/setting.html
+++ b/src/main/resources/templates/setting.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>設定</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
+	<link th:href="@{css/setting.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -14,13 +15,19 @@
 			<h1>設定</h1>
 			<form th:action="@{/setting}" th:object="${user}" method="post">
 				<input type="hidden" name="userId" th:value="*{userId}" />
-				<input type="text" id="userName" name="userName" th:value="*{userName}" required>
+				<input type="text" class="userName_form" id="userName" name="userName" th:value="*{userName}" maxlength="255" required>
 				<br>
-				<input type="password" id="password" name="password" placeholder="新しいパスワード">
+				<input type="password" class="password_form" id="password" name="password" maxlength="255" placeholder="新しいパスワード">
 				<br>
-				<p th:if="*{role}=='User'" th:text="一般ユーザー"></p>
-				<p th:if="*{role}=='Admin'" th:text="管理ユーザー"></p>
-				<input type="submit" value="更新">
+				
+				<div class="role">
+				<label >権限：
+				<lebal th:if="*{role}=='ROLE_USER'" th:text="一般"></lebal>
+				<label th:if="*{role}=='ROLE_ADMIN'" th:text="管理"></label>
+				</label>
+				</div>
+				
+				<input type="submit" class="update_btn" value="更新">
 			</form>
 		</div>
 	</div>
