--- a/src/main/resources/templates/userManagement.html
+++ b/src/main/resources/templates/userManagement.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>ユーザー管理</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
+	<link th:href="@{css/userManagement.css}" rel="stylesheet">
 </head>
 
 <body>
@@ -13,12 +14,14 @@
 		<div class="content">
 			<h1>ユーザー管理</h1>
 			<a th:href="@{/register}">新規登録</a>
-			<table>
+			<p th:if="${message} != null" th:text="${message}"></p>
+			<table class="design02">
 				<thead>
 					<tr>
 						<th>ユーザーID</th>
 						<th>ユーザーネーム</th>
 						<th>権限</th>
+						<th></th>
 					</tr>
 				</thead>
 				<tbody>
