--- a/src/main/resources/templates/bookList.html
+++ b/src/main/resources/templates/bookList.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ホーム</title>
+	<title>書籍一覧</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
 	<link th:href="@{css/bookList.css}" rel="stylesheet">
 	<script src="js/search.js"></script>
