--- a/src/main/resources/templates/regBook.html
+++ b/src/main/resources/templates/regBook.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>ホーム</title>
+<title>書籍登録</title>
 <link th:href="@{css/layout.css}"  rel = "stylesheet">
 <link th:href="@{css/regBook.css}"  rel = "stylesheet">
 </head>
