--- a/src/main/resources/templates/editBook.html
+++ b/src/main/resources/templates/editBook.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ホーム</title>
+	<title>書籍編集</title>
 	<link th:href="@{css/layout.css}" rel="stylesheet">
 	<link th:href="@{css/editBook.css}" rel="stylesheet">
 </head>
