--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>新規登録</title>
+    <title>ユーザー登録</title>
     <link th:href="@{/css/layout.css}" rel="stylesheet">
     <link th:href="@{/css/register.css}" rel="stylesheet">
 </head>
@@ -12,6 +12,7 @@
         <div th:replace="~{sidebar :: sidebar}"></div>
         <div class="content">
             <h1>管理設定：ユーザー登録</h1>
+			<p th:if="${message} != null" th:text="${message}"></p>
             <form th:action="@{/register}" th:object="${user}" method="post">
                 <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                 
